tests/positive/Test31.sp
pi:Int = 2;
pi = _2;

main:Void(a:Int, b:[String]){
	main(2, b);
	main(pi, b);
	return ;
}

