tests/negative/Test16.sp
(* Acessing double position *)
main:Void(a:Int[]) {
	i:Double = 2.0;
	a[i];
	return ;
}